--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@radix-ui/react-toggle-group": "1.1.0",
     "@radix-ui/react-tooltip": "1.1.3",
     "@solana/web3.js": "1.95.4",
+    "axios": "1.7.7",
     "bip39-web-crypto": "4.0.1",
     "bs58": "6.0.0",
     "class-variance-authority": "0.7.0",
